tests/base/invalid/List_CompileFail_2.whiley
import * from whiley.lang.*

void ::main(System.Console sys):
     x = a2[0]
